# langchain-objectbox

./: .gitignore  .gitlab-ci.yml  README.md  developer-notes.md
examples/local-rag/: README.md  local-rag.py  requirements.txt  setup.sh
libs/objectbox/: pyproject.toml  tox.ini
libs/objectbox/langchain_objectbox/: vectorstores.py
libs/objectbox/testdata/: objectbox_data.txt
libs/objectbox/tests/integration_tests/: test_objectbox.py
libs/objectbox/tests/integration_tests/vectorstores/: fake_embeddings.py
libs/objectbox/tests/unit_tests/: test_imports.py  test_vectorstores.py
scripts/: copy-from-langchain-fork.sh  setup-tox.sh
